Improve styling, upgrade dependencies

--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -1,6 +1,5 @@
-* {
-	font-family: sans-serif;
-}
+@import url('https://rsms.me/inter/inter.css');
+* { font-family: 'Inter', sans-serif; }
 
 body {
 	max-width: 600px;
