--- a/frontend/src/css/popup.css
+++ b/frontend/src/css/popup.css
@@ -62,3 +62,11 @@ button.secondary:hover {
 .button-row > button:not(:last-child) {
 	margin-right: 4px;
 }
+
+.grecaptcha-badge { visibility: hidden; }
+
+.recaptcha-disclaimer > p,
+.recaptcha-disclaimer > p > a {
+  font-size: 8px;
+  margin-bottom: 0;
+}
